[package]
name = "rivi-loader"
version = "0.1.3"
authors = ["Juuso Haavisto <juuso@mail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Vulkan compute loader"
homepage = "https://github.com/periferia-labs/rivi-loader"
repository = "https://github.com/periferia-labs/rivi-loader"
readme = "README.md"
keywords = ["gpgpu", "vulkan", "spirv", "spir-v"]
categories = ["accessibility", "concurrency", "game-development", "hardware-support", "science"]
exclude = [
    "examples",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.35.1"
gpu-allocator = "0.15.1"
rspirv = "0.11.0"
rayon = "1.5.1"

[dev-dependencies]
csv = "1.1.6"